--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==4.0.0
 cryptography==3.4.6
 idna==2.10
 pycparser==2.20
+python-dotenv==0.15.0
 requests==2.25.1
 simple-salesforce==1.10.1
 urllib3==1.26.3
